--- a/package.json
+++ b/package.json
@@ -9,6 +9,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.11"
+    "@fontsource-variable/inter": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.5",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "astro": "^5.7.11",
+    "astro-icon": "^1.1.5",
+    "pg": "^8.15.6",
+    "react-use": "^17.6.0",
+    "tailwind-merge": "^3.2.0",
+    "unpic": "^4.1.2"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/pg": "^8.15.0",
+    "tailwindcss": "^3.4.3"
   }
 }
