--- a/package.json
+++ b/package.json
@@ -6,24 +6,39 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint . --ext .js,.ts,.astro",
+    "lint:fix": "eslint . --ext .js,.ts,.astro --fix"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@aws-sdk/client-s3": "^3.806.0",
+    "@aws-sdk/s3-request-presigner": "^3.806.0",
     "@fontsource-variable/inter": "^5.2.5",
     "@tailwindcss/vite": "^4.1.5",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
-    "astro": "^5.7.11",
+    "astro": "^5.7.12",
     "astro-icon": "^1.1.5",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "pg": "^8.15.6",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.2.0",
+    "typescript": "^5.8.3",
     "unpic": "^4.1.2"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@eslint/js": "^9.26.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/express": "^5.0.1",
     "@types/pg": "^8.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "astro-eslint-parser": "^1.2.2",
+    "eslint": "^9.26.0",
+    "eslint-plugin-astro": "^1.3.1",
     "tailwindcss": "^3.4.3"
   }
 }
