--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/vercel": "^8.1.4",
     "@aws-sdk/client-s3": "^3.806.0",
+    "@aws-sdk/client-ses": "^3.806.0",
     "@aws-sdk/s3-request-presigner": "^3.806.0",
     "@fontsource-variable/inter": "^5.2.5",
     "@tailwindcss/vite": "^4.1.5",
